# ner_demo

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/: app.py  classes.py
