[tool.poetry]
name = "ner_demo"
version = "0.1.0"
description = "A quick app demo, to check multiprocessing inside Docker images"
authors = ["dave-espinosa <dec13666@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
spacy = "^3.2.1"
fastapi = "^0.72.0"
uvicorn = "^0.17.0"
en_core_web_lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.2.0/en_core_web_lg-3.2.0.tar.gz" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
